fix: mod clashing through automatic version isolation (v1.3.0)